fix app tenant redirect uri bug
