# docs/swagger.json
@@ -171,8 +171,7 @@
                         "type": "string",
                         "description": "tenant host",
                         "name": "vhost",
-                        "in": "path",
-                        "required": true
+                        "in": "header"
                     }
                 ],
                 "responses": {
@@ -205,8 +204,7 @@
                         "type": "string",
                         "description": "tenant host",
                         "name": "vhost",
-                        "in": "path",
-                        "required": true
+                        "in": "header"
                     },
                     {
                         "description": "body",
@@ -244,8 +242,7 @@
                         "type": "string",
                         "description": "tenant host",
                         "name": "vhost",
-                        "in": "path",
-                        "required": true
+                        "in": "header"
                     },
                     {
                         "type": "string",
@@ -290,8 +287,7 @@
                         "type": "string",
                         "description": "tenant host",
                         "name": "vhost",
-                        "in": "path",
-                        "required": true
+                        "in": "header"
                     },
                     {
                         "type": "string",
@@ -1231,13 +1227,27 @@
             }
         },
         "request.AppReq": {
-            "type": "object"
-        },
-        "request.AppSecretReq": {
             "type": "object",
             "properties": {
                 "describe": {
                     "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "request.AppSecretReq": {
+            "type": "object",
+            "properties": {
+                "accessExpire": {
+                    "type": "integer"
+                },
+                "describe": {
+                    "type": "string"
+                },
+                "refreshExpire": {
+                    "type": "integer"
                 },
                 "scope": {
                     "type": "string"
